# C-C-_Cmake

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  hellofunc.c
exampleHello/: CMakeLists.txt  hellomake.c
include/: hellomake.h
src/: hellofunc.c
src/gtest/: CMakeLists.txt  gtest1.cpp
src/hello/: CMakeLists.txt
src/opencv/: CMakeLists.txt  opencv.cpp
